flux/apps/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: glance

spec:
  selector:
    matchLabels:
      app: glance

  replicas: 1

  template:
    metadata:
      labels:
        app: glance

    spec:
      volumes:
        - name: config
          configMap:
            name: config

      containers:
        - name: glance
          image: glanceapp/glance:v0.6.4
          imagePullPolicy: IfNotPresent
          args: [ "--config", "/config/config.yaml" ]

          volumeMounts:
            - name: config
              mountPath: /config

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http
