flux/apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance

spec:
  selector:
    app: glance

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
